--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "Settings": {
     "LowerTempSensor": "28-011936392d0d",
     "HigherTempSensor": "28-011935a9c96f",
-    "AmbientTempSensor": "28-00000c05b380",
+    "AmbientTempSensor": "28-00000eb84fe0",
     "MinimumTempDiff": 5,
     "IsAuto": false,
     "DayStart": 9,
@@ -16,6 +16,14 @@
     "LowerTempSensorOffset": 0,
     "HigherTempSensorOffset": 0,
     "AmbientTempSensorOffset": 0
+  },
+  "LED": {
+    "RedLED":5,
+    "GreenLED":3,
+    "YellowLED":2,
+    "BlinkingLED":7,
+    "Relay":6
+
   },
   "ConnectionStrings": {
     "ControlDB": {
